[project]
name = "samloader3"
version = "1.1.0"
description="Updated implementation of the Samsung-Firmware Downloader (samloader)"
authors = [
  { name="MatrixEditor", email="not@supported.com" },
]
readme = "README.md"
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',

    # These versions are subject to be approved
    # 'Programming Language :: Python :: 3.8',
    # 'Programming Language :: Python :: 3.9',
    # 'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
  ]

[project.urls]
"Homepage" = "https://github.com/MatrixEditor/samloader3"
"API-Docs" = "https://matrixeditor.github.io/samloader3"

[project.scripts]
samloader3 = "samloader3.cli:run_with_args"

[tool.setuptools.packages.find]
where = ["."]
include = ["samloader3*"]